# sem16

./: CMakeLists.txt  README.md
include/: algorithms.hpp
report/: report.html
src/: algorithms.cpp  main.cpp
